Fix: Alignments

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .main {
-  margin: 75px auto 54px auto;
+  margin: 74px auto 54px auto;
   width: 626px;
 }
 
@@ -33,6 +33,9 @@ p {
   line-height: 22px;
   font-size: 15px;
 }
+#customHeight {
+  line-height: 20px;
+}
 p + p {
   margin-top: 32px;
 }
@@ -45,6 +48,8 @@ footer a + a {
 }
 
 a {
+  font-size: 15px;
+  line-height: 147.7%;
   color: #3f3d56;
   font-weight: bold;
   text-decoration: none;
@@ -59,7 +64,6 @@ a {
 }
 
 #wave {
-  position: fixed;
-  bottom: 0;
-  left: 0;
+  margin-top: 40.83px;
+  margin-bottom: 0;
 }
